redesign style.css

--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -18,22 +18,24 @@ Provide clear button "C" to clear the result and clear the screen -->
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="inputField">
-            <input type="number" id="num1" placeholder="Input First Number: "></input>
-            <input type="number" id="num2" placeholder="Input Second Number: "></input>
-        </div>
-        <div class="operators">
-            <button onClick="calculation('+')">+</button>
-            <button onClick="calculation('-')">-</button>
-            <button onClick="calculation('*')">*</button>
-            <button onClick="calculation('/')">/</button>
-        </div>
-        <div class="reset">
-        <button onClick="equal()">=</button>
-        <button onClick="clear()">C</button>
-    </div>
-        <div>
-            <h2>Result: <input type="text" id="result" readonly></h2>
+        <div class="calculator">
+            <div class="inputField">
+                <input type="number" id="num1" placeholder="Input First Number: "></input>
+                <input type="number" id="num2" placeholder="Input Second Number: "></input>
+            </div>
+            <div class="operators">
+                <button onClick="calculation('+')">+</button>
+                <button onClick="calculation('-')">-</button>
+                <button onClick="calculation('*')">*</button>
+                <button onClick="calculation('/')">/</button>
+            </div>
+            <div class="reset">
+                <button onClick="equal()">=</button>
+                <button onClick="clear()">C</button>
+            </div>
+            <div>
+                <h2>Result: <input type="text" id="result" readonly></h2>
+            </div>
         </div>
     </body>
     <script src="calculator.js"></script>
