--- a/lab exercise 4/index.html
+++ b/lab exercise 4/index.html
@@ -69,26 +69,27 @@
 				</div>
 			</div>
 		</nav>
+
 		<div class="container mt-4">
-			<div class="row">
-				<div class="col-12 col-md-6 col-lg-3 mb-4">
-					<div class="card" style="width: 18rem">
-						<img src="..." class="card-img-top" alt="..." />
-						<div class="card-body">
-							<h5 class="card-title">Card title</h5>
-							<p class="card-text">
-								Some quick example text to build on the card title and make up
-								the bulk of the card's content.
-							</p>
-							<a href="#" class="btn btn-primary">Go somewhere</a>
-						</div>
+			<button class="btn btn-primary mb-3" onclick="populateImg()">
+				Add Images
+			</button>
+			<div class="row" id="card-container"></div>
+		</div>
+
+		<template id="card-template">
+			<div class="col-12 col-md-6 col-lg-3 mb-4">
+				<div class="card" style="width: 18rem">
+					<img src="" class="card-img-top" alt="" />
+					<div class="card-body">
+						<h5 class="card-title"></h5>
+						<p class="card-text"></p>
+						<a href="#" class="btn btn-primary">More Info</a>
 					</div>
 				</div>
 			</div>
-		</div>
+		</template>
 	</body>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-	<script>
-		src = "index.js";
-	</script>
+	<script src="index.js"></script>
 </html>
