--- a/lab exercise 5/index.html
+++ b/lab exercise 5/index.html
@@ -8,5 +8,7 @@
 	<body>
 		<h1>Latest News</h1>
 		<div class="news-container" id="newsContainer"></div>
+		<button id="stopButton">Stop reloading</button>
 	</body>
+	<script src="index.js"></script>
 </html>
