--- a/lab exercise 5/news.html
+++ b/lab exercise 5/news.html
@@ -7,8 +7,12 @@
 	</head>
 	<body>
 		<h1>Latest News</h1>
-		<div class="news-container" id="newsContainer"></div>
+		<div
+			class="news-container"
+			id="newsContainer"
+			style="display: flex; flex-wrap: wrap"
+		></div>
 		<button id="stopButton">Stop reloading</button>
 	</body>
-	<script src="index.js"></script>
+	<script src="news.js"></script>
 </html>
