--- a/lab exercise 4/cardimg.html
+++ b/lab exercise 4/cardimg.html
@@ -91,5 +91,5 @@
 		</template>
 	</body>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="index.js"></script>
+	<script src="cardimg.js"></script>
 </html>
