--- a/lab exercise 5/news.html
+++ b/lab exercise 5/news.html
@@ -9,10 +9,28 @@
 		<h1>Latest News</h1>
 		<div
 			class="news-container"
-			id="newsContainer"
-			style="display: flex; flex-wrap: wrap"
+			id="news-container"
+			style="display: flex; flex-wrap: wrap; gap: 10px"
 		></div>
-		<button id="stopButton">Stop reloading</button>
+		<template id="newsContainer">
+			<div class="card" style="width: 18rem">
+				<div class="card-body">
+					<h5 class="card-title"></h5>
+					<p class="card-text"></p>
+				</div>
+			</div>
+		</template>
+		<div>
+			<label for="newsTitle">Title:</label>
+			<input type="text" id="newsTitle" />
+			<label for="newsContent">Content:</label>
+			<input type="text" id="newsContent" />
+			<button id="addNewsButton">Add News</button>
+		</div>
+
+		<button id="stopButton">Stop</button>
+		<button id="startButton">Start</button>
+		<button id="restartButton">Restart</button>
 	</body>
 	<script src="news.js"></script>
 </html>
